--- a/messenger/Base.lproj/Main.storyboard
+++ b/messenger/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Чаты-->
         <scene sceneID="g7h-cH-Fvv">
             <objects>
-                <tableViewController id="4Np-A4-DTZ" customClass="ChatsUserController" customModule="messenger" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="ChatsUserController" id="4Np-A4-DTZ" customClass="ChatsUserController" customModule="messenger" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="XQV-OC-WEL">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
