--- a/messenger/View/Base.lproj/Main.storyboard
+++ b/messenger/View/Base.lproj/Main.storyboard
@@ -62,36 +62,33 @@
                                     <outlet property="delegate" destination="7gT-md-46z" id="x38-BL-WD9"/>
                                 </connections>
                             </tableView>
-                            <stackView opaque="NO" contentMode="scaleToFill" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IzC-7B-1Yf">
-                                <rect key="frame" x="10" y="818" width="404" height="68"/>
-                                <subviews>
-                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Сообщение..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="TND-Qm-stR">
-                                        <rect key="frame" x="0.0" y="0.0" width="357.5" height="68"/>
-                                        <nil key="textColor"/>
-                                        <textInputTraits key="textInputTraits"/>
-                                    </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t5P-kC-eVq">
-                                        <rect key="frame" x="357.5" y="0.0" width="46.5" height="68"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" image="paperplane.fill" catalog="system"/>
-                                    </button>
-                                </subviews>
-                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="cz9-0N-RA4"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
                         <constraints>
-                            <constraint firstItem="cz9-0N-RA4" firstAttribute="bottom" secondItem="Ud7-ji-WQd" secondAttribute="bottom" id="89i-wf-ENe"/>
-                            <constraint firstAttribute="trailing" secondItem="IzC-7B-1Yf" secondAttribute="trailing" id="8qj-Uk-k92"/>
-                            <constraint firstItem="IzC-7B-1Yf" firstAttribute="top" secondItem="Ud7-ji-WQd" secondAttribute="bottom" constant="5" id="A0i-SM-NbK"/>
-                            <constraint firstAttribute="bottom" secondItem="IzC-7B-1Yf" secondAttribute="bottom" constant="10" id="PDK-RJ-kAZ"/>
-                            <constraint firstItem="IzC-7B-1Yf" firstAttribute="leading" secondItem="XDd-VO-eSx" secondAttribute="leading" constant="10" id="gln-K7-YoD"/>
-                            <constraint firstItem="Ud7-ji-WQd" firstAttribute="top" secondItem="cz9-0N-RA4" secondAttribute="top" id="h75-ng-1ip"/>
-                            <constraint firstItem="Ud7-ji-WQd" firstAttribute="leading" secondItem="cz9-0N-RA4" secondAttribute="leading" id="kJh-Qg-wjU"/>
-                            <constraint firstItem="Ud7-ji-WQd" firstAttribute="trailing" secondItem="cz9-0N-RA4" secondAttribute="trailing" id="kZH-Qp-qal"/>
+                            <constraint firstItem="Ud7-ji-WQd" firstAttribute="bottom" secondItem="cz9-0N-RA4" secondAttribute="bottom" id="RnR-Ao-5HA"/>
+                            <constraint firstItem="Ud7-ji-WQd" firstAttribute="trailing" secondItem="cz9-0N-RA4" secondAttribute="trailing" id="iGl-G0-j7N"/>
+                            <constraint firstItem="Ud7-ji-WQd" firstAttribute="top" secondItem="cz9-0N-RA4" secondAttribute="top" id="mbs-wP-7Qm"/>
+                            <constraint firstItem="Ud7-ji-WQd" firstAttribute="leading" secondItem="cz9-0N-RA4" secondAttribute="leading" id="r7q-WS-Yff"/>
                         </constraints>
                     </view>
-                    <toolbarItems/>
+                    <toolbarItems>
+                        <barButtonItem style="plain" id="8yD-Sm-cgB">
+                            <textField key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="ehM-JQ-spx">
+                                <rect key="frame" x="20" y="10" width="310" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </barButtonItem>
+                        <barButtonItem style="plain" systemItem="flexibleSpace" id="sqT-DW-Zqh"/>
+                        <barButtonItem title="Item" id="XXd-Fk-ehO">
+                            <imageReference key="image" image="paperplane.fill" catalog="system" symbolScale="large"/>
+                            <connections>
+                                <action selector="send" destination="7gT-md-46z" id="CMg-AW-NUm"/>
+                            </connections>
+                        </barButtonItem>
+                    </toolbarItems>
                     <navigationItem key="navigationItem" title="Title" id="gHy-az-AYK">
                         <barButtonItem key="rightBarButtonItem" title="Чаты" id="voH-t3-YRP">
                             <connections>
@@ -107,7 +104,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TcO-yt-Dxt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="764" y="753"/>
+            <point key="canvasLocation" x="762.39999999999998" y="752.47376311844084"/>
         </scene>
         <!--Контакты-->
         <scene sceneID="jhY-VQ-3t6">
