--- a/messenger/View/Base.lproj/Main.storyboard
+++ b/messenger/View/Base.lproj/Main.storyboard
@@ -46,65 +46,88 @@
             </objects>
             <point key="canvasLocation" x="765" y="62"/>
         </scene>
-        <!--Чат-->
-        <scene sceneID="cAK-mi-KvJ">
+        <!--Title-->
+        <scene sceneID="eJh-Jx-w80">
             <objects>
-                <viewController storyboardIdentifier="ChatController" title="Чат" id="7gT-md-46z" customClass="ChatController" customModule="messenger" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="XDd-VO-eSx">
+                <viewController storyboardIdentifier="ChatController" id="Zrl-6j-3hJ" customClass="ChatController" customModule="messenger" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="WUM-Js-rdJ">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" verticalHuggingPriority="251" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Ud7-ji-WQd">
-                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <connections>
-                                    <outlet property="dataSource" destination="7gT-md-46z" id="EWO-iR-F1y"/>
-                                    <outlet property="delegate" destination="7gT-md-46z" id="x38-BL-WD9"/>
-                                </connections>
-                            </tableView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cT4-J6-8dy">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JaV-jf-w8P">
+                                        <rect key="frame" x="10" y="759" width="404" height="34"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P1M-KF-HlP">
+                                                <rect key="frame" x="0.0" y="0.0" width="357.5" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Mdx-KL-l9n">
+                                                <rect key="frame" x="357.5" y="0.0" width="46.5" height="34"/>
+                                                <state key="normal" title="Button"/>
+                                                <buttonConfiguration key="configuration" style="plain">
+                                                    <imageReference key="image" image="paperplane.fill" catalog="system" symbolScale="large"/>
+                                                </buttonConfiguration>
+                                                <connections>
+                                                    <action selector="send" destination="Zrl-6j-3hJ" eventType="touchUpInside" id="Qyn-tq-jVp"/>
+                                                </connections>
+                                            </button>
+                                        </subviews>
+                                    </stackView>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="iFA-nc-UWT">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="749"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="Zrl-6j-3hJ" id="MPk-Mb-Xtq"/>
+                                            <outlet property="delegate" destination="Zrl-6j-3hJ" id="hcd-Op-x19"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="iFA-nc-UWT" secondAttribute="trailing" id="1bp-AY-x3x"/>
+                                    <constraint firstItem="u2X-xs-SWb" firstAttribute="trailing" secondItem="JaV-jf-w8P" secondAttribute="trailing" id="Bcy-1M-kzY"/>
+                                    <constraint firstItem="u2X-xs-SWb" firstAttribute="bottom" secondItem="JaV-jf-w8P" secondAttribute="bottom" constant="15" id="DBy-mj-PbK"/>
+                                    <constraint firstItem="JaV-jf-w8P" firstAttribute="top" secondItem="iFA-nc-UWT" secondAttribute="bottom" constant="10" id="Jex-fb-w6E"/>
+                                    <constraint firstItem="JaV-jf-w8P" firstAttribute="leading" secondItem="u2X-xs-SWb" secondAttribute="leading" constant="10" id="O8W-g5-h8w"/>
+                                    <constraint firstAttribute="bottom" secondItem="JaV-jf-w8P" secondAttribute="bottom" constant="15" id="S34-Sx-oDA"/>
+                                    <constraint firstItem="iFA-nc-UWT" firstAttribute="trailing" secondItem="u2X-xs-SWb" secondAttribute="trailing" id="S9c-Ne-TlL"/>
+                                    <constraint firstItem="iFA-nc-UWT" firstAttribute="leading" secondItem="u2X-xs-SWb" secondAttribute="leading" id="hUU-fv-BNj"/>
+                                    <constraint firstItem="iFA-nc-UWT" firstAttribute="top" secondItem="u2X-xs-SWb" secondAttribute="top" id="xzX-QO-E4V"/>
+                                </constraints>
+                                <viewLayoutGuide key="contentLayoutGuide" id="Q2F-9F-egX"/>
+                                <viewLayoutGuide key="frameLayoutGuide" id="u2X-xs-SWb"/>
+                            </scrollView>
                         </subviews>
-                        <viewLayoutGuide key="safeArea" id="cz9-0N-RA4"/>
-                        <color key="backgroundColor" systemColor="systemGray6Color"/>
+                        <viewLayoutGuide key="safeArea" id="Gkc-m2-jeA"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Ud7-ji-WQd" firstAttribute="bottom" secondItem="cz9-0N-RA4" secondAttribute="bottom" id="RnR-Ao-5HA"/>
-                            <constraint firstItem="Ud7-ji-WQd" firstAttribute="trailing" secondItem="cz9-0N-RA4" secondAttribute="trailing" id="iGl-G0-j7N"/>
-                            <constraint firstItem="Ud7-ji-WQd" firstAttribute="top" secondItem="cz9-0N-RA4" secondAttribute="top" id="mbs-wP-7Qm"/>
-                            <constraint firstItem="Ud7-ji-WQd" firstAttribute="leading" secondItem="cz9-0N-RA4" secondAttribute="leading" id="r7q-WS-Yff"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="trailing" secondItem="Gkc-m2-jeA" secondAttribute="trailing" id="1wJ-7n-y7F"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="leading" secondItem="Gkc-m2-jeA" secondAttribute="leading" id="7Kb-qi-uMZ"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="centerX" secondItem="WUM-Js-rdJ" secondAttribute="centerX" id="aDl-wu-7XQ"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="top" secondItem="Gkc-m2-jeA" secondAttribute="top" id="twL-2R-enQ"/>
+                            <constraint firstAttribute="bottom" secondItem="cT4-J6-8dy" secondAttribute="bottom" id="y6K-Gz-h0Z"/>
                         </constraints>
                     </view>
-                    <toolbarItems>
-                        <barButtonItem style="plain" id="8yD-Sm-cgB">
-                            <textField key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" id="ehM-JQ-spx">
-                                <rect key="frame" x="20" y="10" width="310" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                        </barButtonItem>
-                        <barButtonItem style="plain" systemItem="flexibleSpace" id="sqT-DW-Zqh"/>
-                        <barButtonItem title="Item" id="XXd-Fk-ehO">
-                            <imageReference key="image" image="paperplane.fill" catalog="system" symbolScale="large"/>
-                            <connections>
-                                <action selector="send" destination="7gT-md-46z" id="CMg-AW-NUm"/>
-                            </connections>
-                        </barButtonItem>
-                    </toolbarItems>
                     <navigationItem key="navigationItem" title="Title" id="gHy-az-AYK">
                         <barButtonItem key="rightBarButtonItem" title="Чаты" id="voH-t3-YRP">
                             <connections>
-                                <action selector="toRootScreen:" destination="7gT-md-46z" id="Jui-Vb-vNk"/>
+                                <action selector="toRootScreen:" destination="Zrl-6j-3hJ" id="apt-hT-a3j"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="tableView" destination="Ud7-ji-WQd" id="ikd-g1-4Nb"/>
+                        <outlet property="dataTextField" destination="P1M-KF-HlP" id="Hr4-hw-Bpy"/>
+                        <outlet property="tableView" destination="iFA-nc-UWT" id="cq2-X9-UgV"/>
                     </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="TcO-yt-Dxt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DCz-Xd-Akd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="762.39999999999998" y="752.47376311844084"/>
+            <point key="canvasLocation" x="763.768115942029" y="754.6875"/>
         </scene>
         <!--Контакты-->
         <scene sceneID="jhY-VQ-3t6">
@@ -161,9 +184,6 @@
         <image name="square.and.pencil" catalog="system" width="128" height="115"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray6Color">
-            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
