--- a/messenger/View/Base.lproj/Main.storyboard
+++ b/messenger/View/Base.lproj/Main.storyboard
@@ -55,13 +55,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cT4-J6-8dy">
-                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="0yI-le-8dY">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
+                                        <rect key="frame" x="8" y="8" width="398" height="709"/>
                                         <subviews>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="bVs-cF-emQ">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="735"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="398" height="607"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <connections>
                                                     <outlet property="dataSource" destination="Zrl-6j-3hJ" id="ZiF-tr-B5Z"/>
@@ -69,21 +69,24 @@
                                                 </connections>
                                             </tableView>
                                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QWS-qm-AB6">
-                                                <rect key="frame" x="0.0" y="740" width="414" height="34"/>
+                                                <rect key="frame" x="0.0" y="612" width="398" height="97"/>
                                                 <subviews>
-                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Сообщение ..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="W64-Nu-JN5">
-                                                        <rect key="frame" x="0.0" y="0.0" width="367.5" height="34"/>
-                                                        <nil key="textColor"/>
-                                                        <textInputTraits key="textInputTraits"/>
-                                                    </textField>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H2g-wf-sAP">
-                                                        <rect key="frame" x="367.5" y="0.0" width="46.5" height="34"/>
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="NCc-z8-7ZB">
+                                                        <rect key="frame" x="0.0" y="0.0" width="351.5" height="97"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                        <color key="textColor" systemColor="labelColor"/>
+                                                        <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="15"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                    </textView>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="H98-9o-fZ7">
+                                                        <rect key="frame" x="351.5" y="0.0" width="46.5" height="97"/>
                                                         <state key="normal" title="Button"/>
                                                         <buttonConfiguration key="configuration" style="plain">
                                                             <imageReference key="image" image="paperplane.fill" catalog="system" symbolScale="large"/>
                                                         </buttonConfiguration>
                                                         <connections>
-                                                            <action selector="send" destination="Zrl-6j-3hJ" eventType="touchUpInside" id="OWf-GM-XZr"/>
+                                                            <action selector="send" destination="Zrl-6j-3hJ" eventType="touchUpInside" id="P92-R7-ZbW"/>
                                                         </connections>
                                                     </button>
                                                 </subviews>
@@ -92,22 +95,22 @@
                                     </stackView>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstItem="0yI-le-8dY" firstAttribute="top" secondItem="cT4-J6-8dy" secondAttribute="top" id="Fs3-AM-8P5"/>
-                                    <constraint firstAttribute="trailing" secondItem="0yI-le-8dY" secondAttribute="trailing" id="RjQ-pS-TE5"/>
-                                    <constraint firstItem="0yI-le-8dY" firstAttribute="centerY" secondItem="cT4-J6-8dy" secondAttribute="centerY" id="lVL-kD-wab"/>
-                                    <constraint firstItem="0yI-le-8dY" firstAttribute="centerX" secondItem="cT4-J6-8dy" secondAttribute="centerX" id="lsC-1e-hn0"/>
-                                    <constraint firstItem="0yI-le-8dY" firstAttribute="leading" secondItem="cT4-J6-8dy" secondAttribute="leading" id="vmL-EX-XkP"/>
-                                    <constraint firstAttribute="bottom" secondItem="0yI-le-8dY" secondAttribute="bottom" id="zUm-C4-G64"/>
+                                    <constraint firstItem="0yI-le-8dY" firstAttribute="top" secondItem="cT4-J6-8dy" secondAttribute="topMargin" id="DeM-5f-y7S"/>
+                                    <constraint firstAttribute="bottomMargin" secondItem="0yI-le-8dY" secondAttribute="bottom" id="aHq-hL-NRJ"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="0yI-le-8dY" secondAttribute="trailing" id="aqB-4K-fqa"/>
+                                    <constraint firstItem="0yI-le-8dY" firstAttribute="leading" secondItem="cT4-J6-8dy" secondAttribute="leadingMargin" id="fKQ-rl-bYO"/>
+                                    <constraint firstItem="0yI-le-8dY" firstAttribute="centerX" secondItem="cT4-J6-8dy" secondAttribute="centerX" id="gF5-iD-iOr"/>
+                                    <constraint firstItem="0yI-le-8dY" firstAttribute="centerY" secondItem="cT4-J6-8dy" secondAttribute="centerY" id="nDk-op-HFO"/>
                                 </constraints>
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="Gkc-m2-jeA"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="trailing" secondItem="Gkc-m2-jeA" secondAttribute="trailing" id="HOt-W6-eos"/>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="bottom" secondItem="Gkc-m2-jeA" secondAttribute="bottom" id="anN-Dn-J5F"/>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="leading" secondItem="Gkc-m2-jeA" secondAttribute="leading" id="gL5-lA-xx5"/>
-                            <constraint firstItem="cT4-J6-8dy" firstAttribute="top" secondItem="Gkc-m2-jeA" secondAttribute="top" id="nOh-XP-eyc"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="leading" secondItem="Gkc-m2-jeA" secondAttribute="leading" id="MdF-O3-QzW"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="top" secondItem="Gkc-m2-jeA" secondAttribute="top" id="XPF-tN-II2"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="bottom" secondItem="Gkc-m2-jeA" secondAttribute="bottom" id="inm-mf-QRd"/>
+                            <constraint firstItem="cT4-J6-8dy" firstAttribute="trailing" secondItem="Gkc-m2-jeA" secondAttribute="trailing" id="kj7-EK-cJh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Title" id="gHy-az-AYK">
@@ -118,9 +121,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="dataTextField" destination="W64-Nu-JN5" id="VT9-3G-uxu"/>
+                        <outlet property="dataTextField" destination="NCc-z8-7ZB" id="a2T-wW-pPk"/>
                         <outlet property="scrollView" destination="cT4-J6-8dy" id="22M-wZ-KiY"/>
                         <outlet property="tableView" destination="bVs-cF-emQ" id="4A0-cv-BiG"/>
                     </connections>
@@ -182,6 +185,9 @@
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="person.fill.badge.plus" catalog="system" width="128" height="124"/>
         <image name="square.and.pencil" catalog="system" width="128" height="115"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
