--- a/messenger/View/MessageFromUserCell.xib
+++ b/messenger/View/MessageFromUserCell.xib
@@ -4,20 +4,91 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="MessageFromUserCell" customModule="messenger" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="83" id="KGk-i7-Jjw" customClass="MessageFromUserCell" customModule="messenger" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="336" height="83"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="336" height="83"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4N3-MZ-jF7">
+                        <rect key="frame" x="60" y="10" width="266" height="63"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="исходящее сообщение" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i5P-Gz-h5V">
+                                <rect key="frame" x="8" y="8" width="204" height="47"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LId-0P-dJf">
+                                <rect key="frame" x="243" y="55" width="15" height="0.0"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="15" id="uHZ-T2-Gjh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="22:21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hHn-E3-Ukw">
+                                <rect key="frame" x="212" y="40" width="31" height="15"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="31" id="Agv-Hl-Nge"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" systemColor="systemGrayColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LId-0P-dJf" firstAttribute="leading" secondItem="hHn-E3-Ukw" secondAttribute="trailing" id="4px-kM-dxl"/>
+                            <constraint firstItem="i5P-Gz-h5V" firstAttribute="top" secondItem="4N3-MZ-jF7" secondAttribute="topMargin" id="Mat-UI-mkd"/>
+                            <constraint firstItem="i5P-Gz-h5V" firstAttribute="leading" secondItem="4N3-MZ-jF7" secondAttribute="leadingMargin" id="Qwh-ve-9cX"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="LId-0P-dJf" secondAttribute="bottom" id="Uo0-Bm-xe2"/>
+                            <constraint firstItem="LId-0P-dJf" firstAttribute="trailing" secondItem="4N3-MZ-jF7" secondAttribute="trailingMargin" id="guq-O4-tT6"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="i5P-Gz-h5V" secondAttribute="bottom" id="nR2-4I-uw5"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="hHn-E3-Ukw" secondAttribute="bottom" id="qCD-uu-FrJ"/>
+                            <constraint firstItem="hHn-E3-Ukw" firstAttribute="leading" secondItem="i5P-Gz-h5V" secondAttribute="trailing" id="toG-Cx-dBe"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                <integer key="value" value="20"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
+                </subviews>
+                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                <constraints>
+                    <constraint firstAttribute="trailing" secondItem="4N3-MZ-jF7" secondAttribute="trailing" constant="10" id="GEl-iE-lUK"/>
+                    <constraint firstAttribute="bottom" secondItem="4N3-MZ-jF7" secondAttribute="bottom" constant="10" id="Y95-Ch-QdV"/>
+                    <constraint firstItem="4N3-MZ-jF7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ieb-pE-zw9"/>
+                    <constraint firstItem="4N3-MZ-jF7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="60" id="xeu-ZV-Vor"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="139" y="98"/>
+            <connections>
+                <outlet property="outgoingText" destination="i5P-Gz-h5V" id="Fv3-J2-JNg"/>
+                <outlet property="outgoingTime" destination="hHn-E3-Ukw" id="m9n-OH-5LM"/>
+                <outlet property="symbol" destination="LId-0P-dJf" id="Jzr-R4-wfW"/>
+            </connections>
+            <point key="canvasLocation" x="127.53623188405798" y="17.745535714285712"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGrayColor">
+            <color red="0.55686274509803924" green="0.55686274509803924" blue="0.57647058823529407" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
